Completed experience section, squashed some bugs, added Resume

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,6 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
-
-
 html {
     scroll-behavior: smooth;
 }
@@ -149,4 +147,9 @@ html {
 .logos {
     max-height: 4rem;
     margin-right: 1rem;
+}
+
+.work-sections {
+    padding-right: 2rem;
+    padding-left: 2rem;
 }
